@@ -1,3 +1,7 @@
+2004-08-25 Ian Rutt
+ * Fixed problem with reading arrays from config files in
+   glimmer_setup.f90
+
 2004-08-24 Ian Rutt
  * Added user input to determine length of glimmer_example run
 
